--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
-* {box-sizing: border-box}
+* { box-sizing: border-box;
+  background-color: red;
+}
 
 /* Add padding to containers */
 .container {
@@ -52,3 +54,10 @@ a {
   background-color: #f1f1f1;
   text-align: center;
 }
+
+
+/* 
+.image{
+
+  border: 10px solid red;
+} */
